--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "g": "^2.0.1",
-    "nodemon": "^2.0.12"
+    "mysql2": "^2.3.0",
+    "nodemon": "^2.0.12",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
   },
   "repository": {
     "type": "git",
