--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.17.1",
     "g": "^2.0.1",
     "mysql2": "^2.3.0",
-    "nodemon": "^2.0.12",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
   },
@@ -25,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/junglereef/InfoDev/issues"
   },
-  "homepage": "https://github.com/junglereef/InfoDev#readme"
+  "homepage": "https://github.com/junglereef/InfoDev#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
