--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,9 +1,7 @@
-const { resolve } = require('path')
-const path = require ('path')
+const { resolve } = require("path");
+const path = require("path");
 
-module.exports = { 
-    config: path.resolve('./src/database/config', 'config.js'), 
-    'models-path': path.resolve('./src/models'),
-    'seeders-path': path-resolve('./src/database/seeders'),
-    'migrations-path': path.resolve('./src/database/migrations'),
-}
+module.exports = {
+  config: path.resolve("./src/database/config/config.js"),
+  "models-path": path.resolve("./src/models"),
+};
