--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "g": "^2.0.1",
+    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
