--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
