--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "mdb-ui-kit": "^3.10.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
