--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "uuid": "^8.3.2"
@@ -32,7 +33,7 @@
   },
   "homepage": "https://github.com/junglereef/InfoDev#readme",
   "devDependencies": {
-    "nodemon": "^2.0.14",
-    "sequelize-cli": "^6.2.0"
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.3.0"
   }
 }
